html pages added plus website styled

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="portfolio">
       <header>
         <nav>
-          <h3 class="logo">Oli</h3>
+          <h3 class="logo">Oliver</h3>
           <img src="./img/hamburger.svg" alt="burger" />
         </nav>
         <main>
@@ -54,6 +54,7 @@
               <img class="model-right" src="./img/hair-right.jpg" alt="hair" />
             </div>
           </section>
+          <!-- ______________ DOTS ______________-->
           <div class="pages">
             <div class="page-1">
               <h3>01</h3>
