--- a/index.html
+++ b/index.html
@@ -11,7 +11,32 @@
       <header>
         <nav>
           <h3 class="logo">Oliver</h3>
-          <img src="./img/hamburger.svg" alt="burger" />
+          <svg
+            class="menu"
+            width="43"
+            height="23"
+            viewBox="0 0 43 23"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <line y1="1.5" x2="43" y2="1.5" stroke="white" stroke-width="3" />
+            <line y1="11.5" x2="28" y2="11.5" stroke="white" stroke-width="3" />
+            <line y1="21.5" x2="16" y2="21.5" stroke="white" stroke-width="3" />
+          </svg>
+          <div class="nav-open">
+            <div class="contact">
+              <h3>Contact</h3>
+              <p>+16-194-15205</p>
+            </div>
+            <div class="social">
+              <h3>Social</h3>
+              <div class="social-links">
+                <img src="./img/Facebook.svg" alt="facebook" />
+                <img src="./img/Instagram.svg" alt="instagram" />
+                <img src="./img/Twitter.svg" alt="twitter" />
+              </div>
+            </div>
+          </div>
         </nav>
         <main>
           <!-- _________________________________ PHOTOGRAPHER _________________________________-->
@@ -22,12 +47,18 @@
               <p>03/15/20</p>
             </div>
             <div class="hero">
-              <img class="model-left" src="./img/model-left.jpg" alt="model" />
-              <img
-                class="model-right"
-                src="./img/model-right.jpg"
-                alt="model"
-              />
+              <a href="./photo.html">
+                <img
+                  class="model-left"
+                  src="./img/model-left.jpg"
+                  alt="model"
+                />
+                <img
+                  class="model-right"
+                  src="./img/model-right.jpg"
+                  alt="model"
+                />
+              </a>
             </div>
           </section>
           <!-- _________________________________ PRO CHEF _________________________________-->
@@ -38,8 +69,14 @@
               <p>03/15/20</p>
             </div>
             <div class="hero">
-              <img class="model-left" src="./img/chef-left.jpg" alt="chef" />
-              <img class="model-right" src="./img/chef-right.jpg" alt="chef" />
+              <a href="./chef.html">
+                <img class="model-left" src="./img/chef-left.jpg" alt="chef" />
+                <img
+                  class="model-right"
+                  src="./img/chef-right.jpg"
+                  alt="chef"
+                />
+              </a>
             </div>
           </section>
           <!-- _________________________________ PRO STYLIST _________________________________-->
@@ -50,8 +87,14 @@
               <p>03/15/20</p>
             </div>
             <div class="hero">
-              <img class="model-left" src="./img/hair-left.jpg" alt="hair" />
-              <img class="model-right" src="./img/hair-right.jpg" alt="hair" />
+              <a href="./barber.html">
+                <img class="model-left" src="./img/hair-left.jpg" alt="hair" />
+                <img
+                  class="model-right"
+                  src="./img/hair-right.jpg"
+                  alt="hair"
+                />
+              </a>
             </div>
           </section>
           <!-- ______________ DOTS ______________-->
