--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="portfolio">
       <header>
         <nav>
-          <h3 class="logo">Oliver</h3>
+          <h3 class="logo">Oliver CT</h3>
           <svg
             class="menu"
             width="43"
@@ -142,5 +142,17 @@
         </main>
       </header>
     </div>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"
+      integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"
+      integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./app.js"></script>
   </body>
 </html>
